--- a/_posts/2019-03-24-demo_post_2.md
+++ b/_posts/2019-03-24-demo_post_2.md
@@ -2,7 +2,7 @@
 layout: post_2
 title: 'Demo Post 2'
 date: 2018-06-30 00:00:00
-subheading: Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis consectetur purus sit amet fermentum.
+subheading: Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
 tags: tag1 tag2
 featured_image: '/assets/images/1.jpg'
 ---
