update about picture

--- a/_motivation/march-10-2020.md
+++ b/_motivation/march-10-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/brigitte-tohm-efuOiacf3sM-unsplash.jpg'
-date: March 1 2020
+date: March 10 2020
 ---
