--- a/_motivation/march-5-2020.md
+++ b/_motivation/march-5-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/pro-church-media-p2OQW69vXP4-unsplash.jpg'
-date: March 1 2020
+date: March 5 2020
 ---
