--- a/_motivation/march-7-2020.md
+++ b/_motivation/march-7-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/rodion-kutsaev-v1IQm8wYBus-unsplash.jpg'
-date: March 1 2020
+date: March 7 2020
 ---
