--- a/_motivation/march-11-2020.md
+++ b/_motivation/march-11-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/cole-patrick-EhqI7RRwHrE-unsplash.jpg'
-date: March 1 2020
+date: March 11 2020
 ---
