--- a/_motivation/march-12-2020.md
+++ b/_motivation/march-12-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/katarzyna-kos-sCFKb-7K130-unsplash.jpg'
-date: March 1 2020
+date: March 12 2020
 ---
