--- a/_motivation/march-2-2020.md
+++ b/_motivation/march-2-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/laurice-manaligod-ThJIf6Q0b2s-unsplash.jpg'
-date: March 1 2020
+date: March 2 2020
 ---
