--- a/_motivation/march-3-2020.md
+++ b/_motivation/march-3-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/maria-shanina-BsmsRdW_hEk-unsplash.jpg'
-date: March 1 2020
+date: March 3 2020
 ---
