--- a/_motivation/march-4-2020.md
+++ b/_motivation/march-4-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/autumn-mott-rodeheaver-SPd9CSoWCkY-unsplash.jpg'
-date: March 1 2020
+date: March 4 2020
 ---
