--- a/_motivation/march-6-2020.md
+++ b/_motivation/march-6-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/quentin-zwzeorQPepo-unsplash.jpg'
-date: March 1 2020
+date: March 6 2020
 ---
