--- a/_motivation/march-8-2020.md
+++ b/_motivation/march-8-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/rowan-heuvel-E8yaUAACUb4-unsplash.jpg'
-date: March 1 2020
+date: March 8 2020
 ---
