--- a/_motivation/march-9-2020.md
+++ b/_motivation/march-9-2020.md
@@ -1,4 +1,5 @@
 ---
+layout: motivation_item
 image: '/uploads/motivation/tim-mossholder-w7gqF92AL2A-unsplash.jpg'
-date: March 1 2020
+date: March 9 2020
 ---
