--- a/_motivation/march-1-2020.md
+++ b/_motivation/march-1-2020.md
@@ -2,4 +2,6 @@
 layout: motivation_item
 image: '/uploads/motivation/autumn-mott-rodeheaver-SPd9CSoWCkY-unsplash.jpg'
 date: March 1 2020
+quote: “Courage is the first of human qualities because it is the quality which guarantees all others.”
+author: Winston Churchill
 ---
