--- a/_motivation/march-11-2020.md
+++ b/_motivation/march-11-2020.md
@@ -2,4 +2,6 @@
 layout: motivation_item
 image: '/uploads/motivation/cole-patrick-EhqI7RRwHrE-unsplash.jpg'
 date: March 11 2020
+quote: “Luck is a dividend of sweat. The more you sweat, the luckier you get.”
+author: Ray Kroc
 ---
