--- a/_motivation/march-10-2020.md
+++ b/_motivation/march-10-2020.md
@@ -2,4 +2,6 @@
 layout: motivation_item
 image: '/uploads/motivation/brigitte-tohm-efuOiacf3sM-unsplash.jpg'
 date: March 10 2020
+quote: “You may find the worst enemy or best friend in yourself.”
+author: English Proverb
 ---
