--- a/_motivation/march-2-2020.md
+++ b/_motivation/march-2-2020.md
@@ -2,4 +2,6 @@
 layout: motivation_item
 image: '/uploads/motivation/laurice-manaligod-ThJIf6Q0b2s-unsplash.jpg'
 date: March 2 2020
+quote: “The great thing in this world is not so much where you stand, as in what direction you are moving.”
+author: Oliver Wendell Holmes
 ---
