--- a/_motivation/march-4-2020.md
+++ b/_motivation/march-4-2020.md
@@ -1,5 +1,7 @@
 ---
 layout: motivation_item
-image: '/uploads/motivation/autumn-mott-rodeheaver-SPd9CSoWCkY-unsplash.jpg'
+image: '/uploads/1.jpg'
 date: March 4 2020
+quote: “Though no one can go back and make a brand new start, anyone can start from now and make a brand new ending.”
+author: Carl Bard
 ---
