--- a/_motivation/march-12-2020.md
+++ b/_motivation/march-12-2020.md
@@ -1,6 +1,6 @@
 ---
 layout: motivation_item
-image: '/uploads/motivation/katarzyna-kos-sCFKb-7K130-unsplash.jpg'
+image: '/uploads/motivation/4.jpg'
 date: March 12 2020
 quote: “Live each day as if your life had just begun.”
 author: Johann Wolfgang Von Goethe
