get ready for forestry - move pages into blocks and sections - use unveil2.js

--- a/_motivation/march-4-2020.md
+++ b/_motivation/march-4-2020.md
@@ -1,6 +1,6 @@
 ---
 layout: motivation_item
-image: '/uploads/motivation/7.jpg'
+image: '/uploads/7.jpg'
 date: March 4 2020
 quote: “Though no one can go back and make a brand new start, anyone can start from now and make a brand new ending.”
 author: Carl Bard
