--- a/_motivation/march-1-2020.md
+++ b/_motivation/march-1-2020.md
@@ -1,6 +1,6 @@
 ---
 layout: motivation_item
-image: '/uploads/motivation/1.jpg'
+image: '/uploads/1.jpg'
 date: March 1 2020
 quote: “Courage is the first of human qualities because it is the quality which guarantees all others.”
 author: Winston Churchill
