--- a/_motivation/march-10-2020.md
+++ b/_motivation/march-10-2020.md
@@ -1,6 +1,6 @@
 ---
 layout: motivation_item
-image: '/uploads/motivation/2.jpg'
+image: '/uploads/2.jpg'
 date: March 10 2020
 quote: “You may find the worst enemy or best friend in yourself.”
 author: English Proverb
