--- a/_motivation/march-3-2020.md
+++ b/_motivation/march-3-2020.md
@@ -1,6 +1,6 @@
 ---
 layout: motivation_item
-image: '/uploads/motivation/6.jpg'
+image: '/uploads/6.jpg'
 date: March 3 2020
 quote: “The difference between a successful person and others is not lack of strength not a lack of knowledge but rather a lack of will.”
 author: Vince Lombardi
