add instagram, see if it works in production

--- a/_inspiration/march-10-2020.md
+++ b/_inspiration/march-10-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/2.jpg"
 date: March 10 2020
 quote: "“You may find the worst enemy or best friend in yourself.”"
