--- a/_inspiration/march-2-2020.md
+++ b/_inspiration/march-2-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/5.jpg"
 date: March 2 2020
 quote: "“The great thing in this world is not so much where you stand, as in what
