--- a/_inspiration/march-3-2020.md
+++ b/_inspiration/march-3-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/6.jpg"
 date: March 3 2020
 quote: "“The difference between a successful person and others is not lack of strength
