--- a/_inspiration/march-4-2020.md
+++ b/_inspiration/march-4-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/7.jpg"
 date: March 4 2020
 quote: "“Though no one can go back and make a brand new start, anyone can start from
