--- a/_inspiration/march-1-2020.md
+++ b/_inspiration/march-1-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/1.jpg"
 date: March 1 2020
 quote: "“Courage is the first of human qualities because it is the quality which guarantees
