--- a/_inspiration/march-11-2020.md
+++ b/_inspiration/march-11-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/3.jpg"
 date: March 11 2020
 quote: "“Luck is a dividend of sweat. The more you sweat, the luckier you get.”"
