--- a/_inspiration/march-12-2020.md
+++ b/_inspiration/march-12-2020.md
@@ -1,5 +1,5 @@
 ---
-layout: motivation_item
+layout: inspiration_item
 image: "/uploads/4.jpg"
 date: March 12 2020
 quote: "“Live each day as if your life had just begun.”"
