--- a/_inspiration/march-1-2020.md
+++ b/_inspiration/march-1-2020.md
@@ -2,8 +2,7 @@
 layout: inspiration_item
 image: "/uploads/1.jpg"
 date: March 1 2020
-quote: "“Courage is the first of human qualities because it is the quality which guarantees
-  all others.”"
+quote: "“Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.”"
 author: Winston Churchill
 
 ---
